--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@precision-nutrition/ember-data-numerical-date-transform",
+  "name": "ember-data-numerical-date-transform",
   "version": "1.0.1",
   "description": "The default blueprint for ember-cli addons.",
   "directories": {
